--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^9.6.7",
     "binance-api-node": "^0.7.6",
     "clui": "^0.3.6",
+    "cryptocompare": "^0.5.0",
     "gdax": "^0.7.0",
     "window-size": "^1.1.0"
   }
